colocando minha assinatura

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="destaques__categorias">
                 <ul class="destaques__categorias___lista">
                     <li class="destaques__categorias___item">
-                        <a class="destaques__categorias___link" href="#" >
+                        <a class="destaques__categorias___link" href="#">
                             <i class="destaques__categorias___icone fab fa-buromobelexperte"></i>
                             Aplicativos populares
                         </a>
@@ -437,7 +437,10 @@
 
     </main>
     <footer class="rodape">
-        Todos os direitos reservados 2022
+        <p>Todos os direitos reservados 2022</p>
+        <p>Challenge by <a href="https://www.alura.com.br/" target="_blank">Alura</a>. Coded by <a
+                href="https://www.linkedin.com/in/matheuscss/" target="_blank">Matheus Cassioli
+                <img src="./assets/img/linkedin.png" alt=""></a></p>
     </footer>
 
 </body>
